--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>タスクタイマー</title>
 </head>
 <body>
+    <h2>Task Timer</h2>
+    <input type="text" class="input-task" id="input-task"/>
+    <input type="number" id="input-time" min="1" max="120" value="25"/> 分
+    <button type="submit" class="add-btn" id="add-btn">追加</button>
 
+    <div class="task-area" id="task-area">
+        <!--タスクを表示する-->
+        <ul class="task-list" id="task-list"></ul>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
