--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <title>タスクタイマー</title>
 </head>
 <body>
-    <h2>Task Timer</h2>
-    <input type="text" class="input-task" id="input-task"/>
-    <input type="number" id="input-time" min="1" max="120" value="25"/> 分
-    <button type="submit" class="add-btn" id="add-btn">追加</button>
+    <div class="todo-warapper">
+        <h2 class="title">todos</h2>
+        <input type="text" class="input-task" id="input-task" placeholder="タスクを入力"/>
+    <div class="button-box">
+        <input type="number" class="input-time" id="input-time" min="1" max="120" value="25"/> min
+        <button type="submit" class="add-btn" id="add-btn">追加</button>
 
-    <div class="task-area" id="task-area">
-        <!--タスクを表示する-->
-        <ul class="task-list" id="task-list"></ul>
-    </div>
+        <div class="task-area" id="task-area">
+            <!--タスクを表示する-->
+            <ul class="task-list" id="task-list"></ul>
+        </div>
+</div>
+</div>
+
 
     <script src="script.js"></script>
 </body>
